--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/jasmine": "^2.5.47",
     "core-js": "^2.4.1",
     "jsonwebtoken": "^7.2.1",
     "moment": "^2.17.1",
@@ -41,7 +42,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
-    "@types/jasmine": "^2.5.38",
+    "@types/jasmine": "^2.5.47",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
@@ -52,8 +53,10 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "karma-sinon": "^1.0.5",
     "karma-typescript": "^3.0.1",
     "protractor": "~4.0.13",
+    "sinon": "^2.2.0",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.3"
