--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/google.analytics": "0.0.33",
     "@types/jasmine": "^2.5.47",
     "core-js": "^2.4.1",
     "jsonwebtoken": "^7.2.1",
